javascript-event-delegation-with-new-added-dom-demo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <head>
 </head>
 <body>
-<a href="javascript:hello('javascript')" onclick="forEvent(event)">Click Me</a>
+<div>
+    <button type="button" id="addButton">Add more buttons</button>
+</div>
+<div id="main">
+    <div>new buttons</div>
+</div>
 <script src="./index.js"></script>
 </body>
 </html>
